# ministark

./: .gitignore  Cargo.toml  README.md  hello_world.proof  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
algebra/: cargo.toml
algebra/src/: fp_u1.rs  fp_u128.rs  fp_u256.rs  fp_u64.rs  lib.rs  multivariate.rs
benches/: matrix.rs  merkle_tree.rs
brainfuck/: cargo.toml
brainfuck/src/: column.rs  evaluation_argument.rs  instruction_table.rs  io_table.rs  lib.rs  memory_table.rs  permutation_argument.rs  processor_table.rs  stark.rs  table.rs  util.rs
brainfuck/src/sheet/: mod.rs
elliptic-curve/: Cargo.toml
examples/: extension.rs  fib.rs
examples/brainfuck/: air.rs  constraints.rs  cubic_extension.rs  fibonacci.bf  fq3.rs  hello_world.bf  main.rs  prover.rs  tables.rs  trace.rs  vm.rs
examples/fib/: main.rs
examples/fields/: fq3.rs  main.rs
examples/rescue/: main.rs
fast-poly/: Cargo.toml  Makefile
fast-poly/benches/: bench.rs  fft.rs
fast-poly/src/: allocator.rs  domain.rs  lib.rs  plan.rs  prelude.rs  stage.rs  twiddles.rs  utils.rs
fast-poly/src/ec/: mod.rs  schoofs.md  schoofs.rs  secp256k.rs
fast-poly/src/fields/: fp_u1.rs  fp_u128.rs  fp_u256.rs  fp_u64.rs  mod.rs
fast-poly/src/metal/: README.md  evaluate.metal  felt_u128.h  felt_u64.h  felt_u64.h.metal  fft.metal  ntt.metal  permute.h  permute.h.metal  u128.h  u128.h.metal
fast-poly/tests/: shaders.rs
fri/: cargo.toml
fri/src/: lib.rs
gpu/: Cargo.toml  README.md  build.rs
gpu-poly/: Cargo.toml  Makefile  README.md
gpu-poly/benches/: fft.rs
gpu-poly/src/: allocator.rs  fields.rs  lib.rs  macros.rs  plan.rs  prelude.rs  stage.rs  utils.rs
gpu-poly/src/cuda/: fft.cu
gpu-poly/src/cuda/includes/: bn254.h  frarith.h
gpu-poly/src/metal/: felt_u128.h.metal  felt_u64.h.metal  fft.metal  fft.metallib  fft_shaders.h.metal  hash_shaders.h.metal  rpo_shaders.h.metal  shaders.metal  shaders.metallib  u128.h.metal  u256.h.metal
gpu-poly/tests/: fields.rs  rpo.rs  shaders.rs
gpu/benches/: fft.rs
gpu/src/: fields.rs  lib.rs  macros.rs  plan.rs  prelude.rs  stage.rs  utils.rs
gpu/src/metal/: evaluation_shaders.h.metal  fft_shaders.h.metal  hash_shaders.h.metal  shaders.metal  shaders.metallib
gpu/tests/: fields.rs  rpo.rs  shaders.rs
legacy-algebra/: cargo.toml
legacy-algebra/src/: bigint.rs  fp_u128.rs  fp_u64.rs  lib.rs  multivariate.rs  number_theory_transform.rs  univariate.rs
mini-stark/: Cargo.toml  README.md  cargo.toml
mini-stark/benches/: matrix.rs  merkle_tree.rs
mini-stark/examples/: constant_increase.rs  fib.rs  field_check.rs  range_check.rs  read_write_mem.rs  write_felt_bytes.rs
mini-stark/examples/brainfuck/: air.rs  constraints.rs  main.rs  tables.rs  trace.rs  vm.rs
mini-stark/examples/stark_signature_scheme/: main.rs  rescue_prime.rs  signature_scheme.rs
mini-stark/src/: air.rs  challenges.rs  channel.rs  composer.rs  constraint.rs  constraint_evaluator.rs  domain.rs  field.rs  fri.rs  lib.rs  main.rs  merkle.rs  merkle_tree.rs  number_theory_transform.rs  polynomial.rs  protocol.rs  prover.rs  random.rs  trace.rs  utils.rs  verifier.rs
mini-stark/src/constraints/: helper.rs  mod.rs
mini-stark/src/stark/: fast.rs  mod.rs  slow.rs
mini-stark/tests/: composer.rs  constraint.rs  constraint_evaluator.rs  fri.rs  merkle.rs
optimized-fields/: Cargo.toml  README.md
optimized-fields/benches/: fp64.rs
optimized-fields/src/: fp128.rs  fp64.rs  lib.rs  macros.rs
polysonic/: Cargo.toml  README.md
polysonic/benches/: bench.rs
polysonic/src/: allocator.rs  lib.rs  plan.rs  stage.rs  twiddles.rs  utils.rs
polysonic/src/fields/: fp_u128.rs  mod.rs
polysonic/src/metal/: README.md  felt_u128.h  permute.h  u128.h
polysonic/tests/: shaders.rs
src/: air.rs  calculator.rs  challenges.rs  channel.rs  composer.rs  constraint.rs  constraints.rs  debug.rs  eval_cpu.rs  eval_gpu.rs  expression.rs  fri.rs  hash.rs  hints.rs  lib.rs  macros.rs  matrix.rs  merkle.rs  proof.rs  prover.rs  random.rs  stark.rs  trace.rs  utils.rs  verifier.rs  witness.rs
stark/: cargo.toml
stark/examples/: proof.rs
stark/src/: fri.rs  lib.rs  merkle.rs  protocol.rs  salted_merkle.rs
stark/tests/: stark.rs
tests/: constraint.rs  lde_eval.rs  merkle.rs
