[package]
name = "ministark"
description = "GPU accelerated STARK engine"
authors = ["Andrew Milson <andrew.j.milson@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/andrewmilson/ministark"
categories = ["cryptography"]
readme = "README.md"

[workspace]
members = ["gpu-poly"]

[features]
default = [ ]
asm = [ "sha2/asm" ]
gpu = []
parallel = [ "dep:rayon", "ark-std/parallel", "gpu-poly/parallel" ]

[[bench]]
name = "merkle_tree"
path = "benches/merkle_tree.rs"
harness = false

[[bench]]
name = "matrix"
path = "benches/matrix.rs"
# required-features = ["asm", "parallel"]
harness = false

[dependencies]
sha2 = "0.10.6"
digest = "0.10.5"
rand_chacha = "0.3.1"
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/andrewmilson/algebra", branch = "vec-allocator" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-ff-optimized = { git = "https://github.com/andrewmilson/optimized-fields" }
gpu-poly = { path = "./gpu-poly" }
rand = "0.8.5"
snafu = { version = "0.7.4", default-features = false }
rayon = { version = "1.5.3", optional = true }

# Apple silicon depencencies
# TODO: remove. this should be abstracted away
[target.'cfg(target_os = "macos")'.dependencies]
metal = { git = "https://github.com/gfx-rs/metal-rs" }

[dev-dependencies]
criterion = "0.4.0"
structopt = "0.3.26"
sha3 = "0.10.6"
num-bigint = "0.4.3"
num-integer = "0.1.45"

# taken from https://github.com/recmo/uint
# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true