[package]
name = "ministark"
description = "GPU accelerated STARK engine"
authors = ["Andrew Milson <andrew.j.milson@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/andrewmilson/ministark"
categories = ["cryptography"]
readme = "README.md"

[workspace]
members = ["gpu-poly"]

[features]
default = []
gpu = []
std = []
asm = [ "sha2/asm" ]
parallel = [ "dep:rayon", "ark-std/parallel", "gpu-poly/parallel" ]

[[bench]]
name = "merkle_tree"
path = "benches/merkle_tree.rs"
harness = false

[[bench]]
name = "matrix"
path = "benches/matrix.rs"
# required-features = ["asm", "parallel"]
harness = false

[dependencies]
sha2 = "0.10"
digest = "0.10"
rand_chacha = "0.3"
ark-std = "0.4"
ark-ff = "0.4"
ark-poly = { git = "https://github.com/andrewmilson/algebra", branch = "vec-allocator" }
ark-serialize = "0.4"
ark-ff-optimized = "0.4"
gpu-poly = { path = "./gpu-poly", features = [ "arkworks" ] }
rand = "0.8"
snafu = { version = "0.7", default-features = false }
rayon = { version = "1.5", optional = true }

[dev-dependencies]
criterion = "0.4"
structopt = "0.3"
sha3 = "0.10"
num-bigint = "0.4"
num-integer = "0.1"
pollster = "0.2"

# taken from https://github.com/recmo/uint
# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[profile.test]
opt-level = 3

[profile.bench]
codegen-units = 1
lto = true