[package]
name = "fast-poly"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 3

[dependencies]
metal = { path = "../../metal-rs" }
objc = "0.2.7"
libc = "0.2"
num-traits = "0.2.14"
legacy-algebra = { path = "../legacy-algebra" }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
ark-ff = { git = "https://github.com/andrewmilson/algebra" }
ark-ff-optimized = { path = "../optimized-fields" }
ark-poly = { git = "https://github.com/andrewmilson/algebra", features = ["parallel"] }
ark-serialize = { git = "https://github.com/andrewmilson/algebra" }
once_cell = "1.15.0"

[dev-dependencies]
rand_pcg = "0.3.1"
ark-ff = { git = "https://github.com/andrewmilson/algebra" }
ark-poly = { git = "https://github.com/andrewmilson/algebra" }
ark-serialize = { git = "https://github.com/andrewmilson/algebra" }

[[bench]]
name = "fft"
path = "benches/fft.rs"
harness = false