[package]
name = "gpu-poly"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
ark-ff = "0.4.0"
ark-ff-optimized = "0.4.0"
ark-poly = { git = "https://github.com/andrewmilson/algebra", branch = "vec-allocator" }
ark-serialize = "0.4.0"
once_cell = "1.15.0"
rayon = { version = "1.5.3", optional = true }
ark-std = "0.4.0"
winter-math = { version = "0.6", optional = true }
rand = "0.8.5"
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }

[features]
default = []
std = []
winterfell = [ "dep:winter-math" ]
parallel = [ "dep:rayon", "ark-std/parallel" ]

# Apple silicon depencencies
[target.'cfg(all(target_arch = "aarch64", target_os = "macos"))'.dependencies]
metal = { git = "https://github.com/gfx-rs/metal-rs" }

# Apple silicon dev-depencencies
[target.'cfg(all(target_arch = "aarch64", target_os = "macos"))'.dev-dependencies]
objc = "0.2.7"

[dev-dependencies]
criterion = "0.4.0"
pollster = "0.2.4"

# [[target.'cfg(target_arch = "aarch64")'.bench]]
[[bench]]
name = "fft"
path = "benches/fft.rs"
harness = false