[package]
name = "mini-stark"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
fast-poly = { path = "../fast-poly" }
legacy-algebra = { path = "../legacy-algebra" }
